# headtail

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  MANIFEST.in  README.md  pyproject.toml  tok_dict.proto
htmorphs/: .gitignore  __init__.py  ahocorasic.py  headlist.pkl  heads.dict  headtail_nva.pkl  headtail_nvv.pkl  headtail_va.pkl  headtail_vv.pkl  headtail_xsa.pkl  headtail_xsn.pkl  headtail_xsv.pkl  pos-model-uint8.onnx  tok-model-uint8.onnx  tok-model-uint8.onnx.data
onnxruntime/: .gitignore  README.md
src/: BaseORT.cpp  BaseORT.h  HTPostagger.cpp  HTPostagger.h  HTPostagger2.cpp  HTPostagger2.cpp.old  HTPostagger2.h  HTPostagger2.h.old  HTTokenizer.cpp  HTTokenizer.h  HTTokenizer2.cpp  HTTokenizer2.h  Matrix.h  hftokenizer.h  hftokenizer2.h  main.cpp  maintok.cpp  pos_dict.pb.cc  pos_dict.pb.h  thread_main.cpp  thread_main2.cpp  thread_main2.cpp.old  thread_main2.h  tok_dict.pb.cc  tok_dict.pb.h  utils.cpp  utils.h
