[project]
name = "htmorphs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.scikit-build]
cmake.source-dir = "."
sdist.include = [
    "htmorphs/*.bin",
    "htmorphs/*.onnx",
    "htmorphs/*.data",
    "htmorphs/*.proto",
    "htmorphs/*.pkl",
    "htmorphs/tokenizer/*.json",
    "htmorphs/*.dll"
]

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"